--- a/index.html
+++ b/index.html
@@ -72,69 +72,79 @@
         </div>-->
     </header>
 
+
     <!-- <div class="preloader-wrapper-loading">
         <div class="preloader-wrapper">
             <div id="preloader"></div>
         </div> -->
 
 
-        <section class="frame-lockup" id="hero">
-            <div class="landing-header-container">
-                <div class="landing-header-elements">
-                    <h2>Heyo!</h2>
-                    <h1>I'm Bryan</h1>
-                    <p>The best a brand can get. Based in Philly, I'm a Swiss army creative with close to ten years
-                        crushing it as a copywriter, designer, and, most recently, product manager. Look what I
-                        can do: </p>
-                    <a href="product.html"><button type="button" id="sety-button-dark-hover">Product</button></a>
-                    <a href="design.html"><button class="ooni-button"
-                            id="bullhorn-button-dark-hover">Design</button></a>
-                    <a href="copywriting.html"><button type="button"
-                            id="magnum-button-dark-hover">Copywriting</button></a>
-                    <a href="screenwriting.html"><button class="ooni-button"
-                            id="screenwriting-button-dark-hover">Screenwriting</button></a>
-                </div>
+    <section class="frame-lockup" id="hero">
+
+        <video rel="preload" class="video-container" muted autoplay loop>
+            <source src="/video/plasma.mp4" type="video/mp4" />
+        </video>
+
+
+        <div class="landing-header-container">
+            <div class="landing-header-elements">
+                <h2>Heyo!</h2>
+                <h1>I'm Bryan</h1>
+                <p>The best a brand can get. Based in Philly, I'm a Swiss army creative with close to ten years
+                    crushing it as a copywriter, designer, and, most recently, product manager. Look what I
+                    can do: </p>
+                <a href="product.html"><button type="button" id="sety-button-dark-hover">Product</button></a>
+                <a href="design.html"><button class="ooni-button" id="bullhorn-button-dark-hover">Design</button></a>
+                <a href="copywriting.html"><button type="button" id="magnum-button-dark-hover">Copywriting</button></a>
+                <a href="screenwriting.html"><button class="ooni-button"
+                        id="screenwriting-button-dark-hover">Screenwriting</button></a>
             </div>
-        </section>
-
-
-        <div class="down-arrow-gif-container">
-            <a class="down-arrow-gif-a" href="#main-grid"><img src="/images/down-arrow.gif" class="down-arrow-gif"></a>
+            <button class="switch-button">
+                <span>play</span>
+                <span>pause</span>
+                <span class="switch"></span>
+            </button>
         </div>
+    </section>
 
 
-        <div class="line-break-container">
-            <hr id="start" class="experience-break" noshade>
-        </div>
+    <div class="down-arrow-gif-container">
+        <a class="down-arrow-gif-a" href="#main-grid"><img src="/images/down-arrow.gif" class="down-arrow-gif"></a>
+    </div>
 
-        <section class="skills-section" id="main-grid">
-            <div class="main-container">
-                <div class="portfolio">
-                    <a href="product.html#sety" class="portfolio-item sety" title="sety">Sety</a>
-                    <a href="copywriting.html#magnum" class="portfolio-item magnum" title="magnum">Magnum</a>
-                    <a href="design.html#bullhorn" class="portfolio-item bullhorn" title="Bullhorn">Bullhorn</a>
-                    <a href="product.html#ooni" class="portfolio-item ooni" title="ooni">Ooni</a>
-                    <a href="screenwriting.html#spiltmilk" class="portfolio-item spilt-milk" title="spilt milk">Spilt
-                        Milk</a>
-                </div>
+
+    <div class="line-break-container">
+        <hr id="start" class="experience-break" noshade>
+    </div>
+
+    <section class="skills-section" id="main-grid">
+        <div class="main-container">
+            <div class="portfolio">
+                <a href="product.html#sety" class="portfolio-item sety" title="sety">Sety</a>
+                <a href="copywriting.html#magnum" class="portfolio-item magnum" title="magnum">Magnum</a>
+                <a href="design.html#bullhorn" class="portfolio-item bullhorn" title="Bullhorn">Bullhorn</a>
+                <a href="product.html#ooni" class="portfolio-item ooni" title="ooni">Ooni</a>
+                <a href="screenwriting.html#spiltmilk" class="portfolio-item spilt-milk" title="spilt milk">Spilt
+                    Milk</a>
             </div>
-        </section>
-
-
-        <div class="line-break-container">
-            <hr class="experience-break" noshade>
         </div>
+    </section>
 
-        <!-- FOOTER -->
 
-        <footer>
-            <div class="product-container">
-                <div class="footer-section">
-                    <h2>Look no further</h2>
-                    <h1><a href="contact.html">Contact me</a></h1>
-                </div>
+    <div class="line-break-container">
+        <hr class="experience-break" noshade>
+    </div>
+
+    <!-- FOOTER -->
+
+    <footer>
+        <div class="product-container">
+            <div class="footer-section">
+                <h2>Look no further</h2>
+                <h1><a href="contact.html">Contact me</a></h1>
             </div>
-        </footer>
+        </div>
+    </footer>
 
     <script src="jquery.js"></script>
     <script src="main.js"></script>
