--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <div class="landing-header-elements">
                 <h2>Heyo!</h2>
                 <h1>I'm Bryan</h1>
-                <p>The best a brand can get. Based in Philly, I'm a Swiss army creative with close to ten years
-                    crushing it as a copywriter, designer, and, most recently, product manager. Look what I
+                <p>The best a brand can get. Based in Philly, I'm an ambitious creative with close to ten years
+                    lighting it up as a copywriter, designer, and, most recently, product manager. Look what I
                     can do: </p>
                 <a href="product.html"><button type="button" id="sety-button-dark-hover">Product</button></a>
                 <a href="design.html"><button class="ooni-button" id="bullhorn-button-dark-hover">Design</button></a>
